@startuml
' クラス定義
class Main {
    + void main()
}

class JFrame{
}

class Window{

}

class DiaryWindow {

}

class EditWindow {
}

class OperateWindow {
}

class Json {
    # Gson gson
    # String exe_path
    # String data_path
    # Path getApplicationPath()
    + String toJson()
}

class Setting {
    {static}+ String window_title
    {static}+ int window_width
    {static}+ int window_height
}

class SettingJson {    
    - String setting_file_name
    # String setting_file_path
    + void set_file_path()
    + void exportJSON()
    - void write_setting()
    + void importJSON()
    + void setSetting_file_name()
}

class Debugger{
    {static}+ void setDebug()
    {static}+ void out(String text, String label)
    {static}+ void out(String text, int label_level)
    {static}+ void debug_out(DiaryData diaryData)
}

note top of Debugger
     staticで定義．必要に応じて呼び出せる．
end note


' DB関連

class "DiarySQLite(SQLite操作)" as DiarySQLite{
    - DiaryData diaryData
    - Connection conn
    - Statement stm
    - String dbPath
    - String table_name

    + void create_table() 
    + void select(int id)
    + void select(int year,int month,int day)
    + DiaryData getDiaryData()
    + void setDiaryData(DiaryData diaryData)
    + void insert(int year,int month,int day, String title, String main_text, int flag)
    + void drop_table()
    + void dbClose()
}

class "DiaryData(日記情報)" as DiaryData{
    - int id
    - String date
    - String title
    - String main_text
    - int flag

    + int getId()
    + void setId(int id)
    + int getYear()
    + void setYear(int year)
    + int getMonth()
    + void setMonth(int month)
    + int getDay()
    + void setDay(int day)
    + String getTitle()
    + void setTitle(String title)
    + String getMain_text()
    + void setMain_text(String main_text)
    + int getFlag()
    + void setFlag(int flag) 
}

class "OperateDB(DB操作仲介)" as OperateDB{
    - DiarySQLite sqlite
    - String dbPath
    - String table_name = "Diary"

    + void reset()
    + void add(int year, int month, int day, String title, String diary_main_text, int flag)
    + DiaryData get(int id)
    + DiaryData get(int year, int month, int day)
    + DiaryData get_month(int month) 
    + DiaryData get_all()
    + void change_title(DiaryData diaryData, String title)
    + void change_main(DiaryData diaryData, String main)
    + void change_flag(DiaryData diaryData, int flag)
    + void closeDB()
    + String getDbPath()
}

note bottom of OperateDB
    DBを操作する際はこのクラスを呼び出してください．
end note



' 関係
' Json <|-- SettingJson : 継承
Json <|-- SettingJson
JFrame <|-- Window
Window <|-- DiaryWindow
Window <|-- EditWindow
DiaryWindow "1" *-- "1" OperateWindow
EditWindow "1" *-- "1" OperateWindow
OperateWindow "1" *-- "1" Main
Setting "1" *-- "1" SettingJson
Setting "1" *-- "1" Main
DiaryData "1" *-- "1..*" DiarySQLite
DiarySQLite "1" *-- "1" OperateDB
@enduml
